feat: add java native security manager